Adding profiles for Jboss and Was