@@ -8,22 +8,16 @@ buildscript {
 }
 
 apply plugin: "io.spring.dependency-management"
-apply plugin: 'java'
-
-
-def jdkHome = System.getenv("JAVA_HOME")
-def wasHome = System.getenv("WAS85_HOME")
-if(wasHome == null) {
-    wasHome = "/home/tony/IBM/WebSphere/AppServer"
-}
-
 
 dependencyManagement {
     imports {
         mavenBom 'org.jboss.arquillian:arquillian-bom:1.1.7.Final'
+        mavenBom 'org.jboss.shrinkwrap.resolver:shrinkwrap-resolver-gradle-depchain:2.2.0-beta-1'
     }
 }
 
+
+apply from: profile + '-profile.gradle'
 
 sourceCompatibility = '1.6'
 
@@ -32,28 +26,14 @@ targetCompatibility = '1.6'
 
 dependencies {        
     compile "javax:javaee-api:${libraryVersions.javaee}"
+    compile 'org.slf4j:slf4j-api:1.7.7'
+    runtime 'org.slf4j:slf4j-log4j12:1.7.7'
 
     testCompile 'org.jboss.arquillian.junit:arquillian-junit-container'
     testCompile 'junit:junit:4.+'
-
+    testCompile 'org.mockito:mockito-all:1.10.19'
     testCompile "org.hsqldb:hsqldb:${libraryVersions.hyperSql}"
-    testRuntime "org.jboss.arquillian.container:arquillian-was-remote-8.5:1.0.0.Final-SNAPSHOT"
-    testRuntime files("$jdkHome/lib/tools.jar")
-    testRuntime files("$wasHome/dev/was_public.jar")
-    testRuntime files("$wasHome/java/jre/lib/ibmjgssprovider.jar")
-    testRuntime fileTree(dir: "$wasHome/runtimes/", include: '*.jar')
     testRuntime 'org.jboss.logmanager:jboss-logmanager:1.5.4.Final'
+    testCompile 'org.jboss.shrinkwrap.resolver:shrinkwrap-resolver-impl-maven:2.1.0'
 }
 
-
-test {
-    jvmArgs '-XX:MaxPermSize=256m'
-    environment 'WAS85_HOME', wasHome
-
-    systemProperty 'java.util.logging.manager', 'org.jboss.logmanager.LogManager'
-
-    testLogging {
-        exceptionFormat = 'full'
-    }
-
-}
